complete js leap last round

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ gigasecond/node_modules/*
 hello-world/node_modules/*
 rna-transcription/node_modules/*
 two-fer/node_modules/*
+leap/node_modules/*
 
 **/package*
